--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+		"check:lint": "biome check --error-on-warnings",
+		"check:fix": "biome check --write"
   },
   "license": "MIT",
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "solid-devtools": "^0.29.2",
     "vite": "^5.0.11",
     "vite-plugin-solid": "^2.8.2"
